<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background"
    android:orientation="vertical">

    <!-- 标题栏 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_backgound"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/title_bar_icon_width"
            android:layout_height="@dimen/title_bar_icon_height"
            android:layout_margin="@dimen/smallmargin"
            android:gravity="bottom"
            android:src="@drawable/we" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="1dip"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/share"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/icon_button_selector">

            <ImageView
                android:layout_width="@dimen/title_bar_icon_width"
                android:layout_height="@dimen/title_bar_icon_width"
                android:src="@drawable/ic_share" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/margin"  >

        <com.fang.common.controls.CustomSwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_SMS_POPUP"
            custom:summary="@string/setting_sms_popup_summary"
            custom:title="@string/setting_sms_popup" >
        </com.fang.common.controls.CustomSwitchPreference>

        <com.fang.common.controls.CustomSwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_NEW_CALL_POPUP"
            custom:summary="@string/setting_new_call_popup_summary"
            custom:title="@string/setting_new_call_popup" >
        </com.fang.common.controls.CustomSwitchPreference>

        <com.fang.common.controls.CustomSwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_MISSED_CALL_POPUP"
            custom:summary="@string/setting_missed_call_popup_summary"
            custom:title="@string/setting_missed_call_popup" >
        </com.fang.common.controls.CustomSwitchPreference>

        <com.fang.common.controls.CustomSwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_OUTGOING_CALL_POPUP"
            custom:summary="@string/setting_outgoing_call_popup_summary"
            custom:title="@string/setting_outgoing_call_popup" >
        </com.fang.common.controls.CustomSwitchPreference>

        <com.fang.common.controls.CustomSwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_BROADCAST_WHEN_WIREDHEADSETON"
            custom:summary="@string/setting_broadcast_when_wiredheadseton_summary"
            custom:title="@string/setting_broadcast_when_wiredheadseton" >
        </com.fang.common.controls.CustomSwitchPreference>

        <com.fang.common.controls.CustomSwitchPreference
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_EXPRESS_TRACK"
            custom:summary="@string/setting_express_track_summary"
            custom:title="@string/setting_express_track" >
        </com.fang.common.controls.CustomSwitchPreference>

        <com.fang.common.controls.CustomSwitchPreference
            android:id="@+id/weather_notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            custom:defaultValue="true"
            custom:key="@string/SETTING_WEATHER_NOTIFICATION"
            custom:summary="@string/setting_weather_notification_summary"
            custom:title="@string/setting_weather_notification_title" >
        </com.fang.common.controls.CustomSwitchPreference>
    </LinearLayout>

    <Button
        android:id="@+id/feedback"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/smallmargin"
        android:text="@string/feedback" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="@dimen/margin" >

        <TextView
            android:id="@+id/version"
            style="@style/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/hint"/>

        <TextView
            style="@style/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/hint"
            android:text="@string/company" />

        <TextView
            android:id="@+id/check_update"
            style="@style/subText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/blue"
            android:layout_marginLeft="@dimen/smallmargin"
            android:text="@string/check_update" />
    </LinearLayout>
    <!--
         <Button
        android:id="@+id/ads"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/smallmargin"
        android:text="@string/ads" />
    -->

</LinearLayout>