<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallmargin"
            android:text="@string/please_input_feedback"  />
        
        <EditText
            android:id="@+id/feedbackContent"
            style="@style/multiLineEdit"
            android:layout_height="@dimen/MultiEditHeight"
            android:layout_margin="@dimen/margin"
            android:hint="@string/input_feedback" >
        </EditText>
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/smallmargin"
            android:text="@string/please_input_contact"  />
        
        <EditText
            android:id="@+id/feedbackContact"
            style="@style/singleLineEdit"
            android:layout_margin="@dimen/margin"
            android:hint="@string/feedback_contact" >
        </EditText>
        
        <Button
            android:id="@+id/submit"
            style="@style/mainButton"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/smallmargin"
            android:text="@string/submit" />
    </LinearLayout>

    <Button
        android:id="@+id/qq"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/smallmargin"
        android:text="@string/qq" />

    <Button
        android:id="@+id/back"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/smallmargin"
        android:text="@string/back" />

</LinearLayout>