<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_backgound"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="@dimen/title_bar_icon_width"
            android:layout_height="@dimen/title_bar_icon_height"
            android:layout_margin="@dimen/smallmargin"
            android:gravity="bottom"
            android:src="@drawable/we" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="1dip"
            android:text="@string/title_bar_sms"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/more"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:gravity="bottom"
            android:background="@drawable/more_button_style" />
    </LinearLayout>
    
    <Button
        android:id="@+id/select"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/smallmargin"
        android:text="@string/sms_selectContact" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/contactsTip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallmargin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallmargin"
                android:text="@string/sms_receiver"
                android:textColor="@color/hint" />

            <View style="@style/hsplitView" />

            <TextView
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallmargin"
                android:singleLine="false"
                android:textColor="@color/black"
                android:textSize="@dimen/titleTextSize" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallmargin"
                android:text="@string/sms_content"
                android:textColor="@color/hint" />

            <View style="@style/hsplitView" />

            <EditText
                android:id="@+id/content"
                style="@style/multiLineEdit"
                android:layout_margin="@dimen/smallmargin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/smallmargin"
                android:text="@string/sms_sendTime"
                android:textColor="@color/hint" />

            <View style="@style/hsplitView" />

            <TextView
                android:id="@+id/sendTime"
                android:layout_width="match_parent"
                android:layout_height="@dimen/editHeight"
                android:layout_margin="@dimen/smallmargin"
                android:hint="@string/sms_selectSendTime"
                android:gravity="center"
                android:background="@color/white" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/send"
        style="@style/mainButton"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/smallmargin"
        android:text="@string/sms_send" />

</LinearLayout>