<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- 标题栏 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_backgound"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/title_bar_icon_width"
            android:layout_height="@dimen/title_bar_icon_height"
            android:layout_margin="@dimen/smallmargin"
            android:gravity="bottom"
            android:src="@drawable/we" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:paddingTop="1dip"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/system_contact"
            android:layout_width="@dimen/title_bar_height"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/icon_button_selector">

            <ImageView
                android:layout_width="@dimen/title_bar_icon_width"
                android:layout_height="@dimen/title_bar_icon_width"
                android:src="@drawable/ic_contact" />
        </LinearLayout>
    </LinearLayout>

    <com.fang.common.controls.CustomEditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:hintText="@string/sms_search"
        android:focusable="true"
        android:enabled="true"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ListView
                android:id="@+id/list_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:divider="@color/divider"
                android:dividerHeight="1px"
                android:listSelector="@drawable/list_selector"/>

            <com.fang.contact.MyLetterListView
                android:id="@+id/my_list_view"
                android:layout_width="30dip"
                android:layout_height="fill_parent"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/light_black"
            android:gravity="center"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="40dip"
                android:layout_height="40dip" />
        </LinearLayout>
    </FrameLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/byName"
            style="@style/subButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contact_by_sortkey" />

        <View style="@style/vsplitViewWhite" />

        <Button
            android:id="@+id/byTimes"
            style="@style/subButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/contact_by_times" />
    </LinearLayout>

</LinearLayout>